# morfist

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  test.cprof  test_new.cprof
.github/workflows/: python-app.yml
docs/: index.md
morfist/: __init__.py  core.py
morfist/algo/: __init__.py  evaluation.py  histogram.py
morfist/core/: MixedRandomForest.py  MixedRandomTree.py  MixedSplitter.py  __init__.py
morfist/legacy/: __init__.py  core.py
quickstart/: index.html
search/: search_index.json
test/: test.py
tests/: test_comparison_classification.py  test_comparison_regression.py  test_core.py  test_mixed.py
