[tool.poetry]
name = "decision-tree-morfist"
version = "0.3.0"
description = "Multi-target Random Forest implementation that can mix both classification and regression tasks."
authors = ["Andrés Reverón Molina <andres@reveronmolina.me>", "Henrik Linusson <henrik.linusson@hb.se>"]
license = "MIT"
repository = "https://github.com/systemallica/morfist"
readme = "README.md"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "morfist" },
]

[tool.poetry.dependencies]
python = "^3.8.0"
numba = "^0.50.1"
numpy = "^1.19.1"
scipy = "^1.5.2"

[tool.poetry.dev-dependencies]
scikit-learn = "^0.23.1"
setuptools = "^49.2.0"
pytest = "^6.0.1"

