[project]
name = "decision-tree-morfist"
version = "0.4.0"
description = "Multi-target Random Forest implementation that can mix both classification and regression tasks."
authors = [
  { name = "Andrés Reverón Molina", email = "andres@reveronmolina.me" },
  { name = "Henrik Linusson", email = "henrik.linusson@hb.se" },
]
maintainers = [
  { name = "Andrés Reverón Molina", email = "andres@reveronmolina.me" },
]
license = "MIT"
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numba>=0.59.1", "numpy>=1.26.4", "scipy>=1.13.0"]
requires-python = ">= 3.8"

[project.urls]
Documentation = "https://systemallica.github.io/morfist/"
Repository = "https://github.com/systemallica/morfist"
Changelog = "https://github.com/systemallica/morfist/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "pytest>=8.2.0",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.21",
  "scikit-learn>=1.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["morfist"]

[tool.ruff]
exclude = [".pyenv", ".pytest_cache", ".venv", ".vscode"]
line-length = 88

target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["F401"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
